Fri Apr 22 08:24:41 UTC 2011  Johnny Willemsen  <jwillemsen@remedy.nl>

        * connectors/dds4ccm/tests/SLDisabled/Sender/SL_Disabled_Sender_exec.cpp:
        * connectors/dds4ccm/tests/SLManyByMany/Sender/SL_ManyByMany_Sender_exec.cpp:
        * connectors/dds4ccm/tests/SLOneByOne/Sender/SL_OneByOne_Sender_exec.cpp:
          Added missing breaks

Fri Apr 22 07:35:30 UTC 2011  Marcel Smit  <msmit@remedy.nl>

        * performance-tests/Protocols/descriptors/svc.conf:
          Fuzz: Added $Id string.

Thu Apr 21 09:38:23 UTC 2011  Johnny Willemsen  <jwillemsen@remedy.nl>

        * MPC/config/dds4ccm.mpb:
        * MPC/config/dds4ccm_base.mpb:
        * MPC/config/dds4ccm_impl.mpb:
        * MPC/config/dds4ccm_ts_default.mpb:
          Extended base projects

Thu Apr 21 08:29:25 UTC 2011  Johnny Willemsen  <jwillemsen@remedy.nl>

        * MPC/config/ndds_idltocpp_ts_defaults.mpb:
          Added taolib

Wed Apr 20 08:11:49 UTC 2011  Johnny Willemsen  <jwillemsen@remedy.nl>

        * CIAO_TAO_DAnCE.mwc:
        * MPC/config/dds4ccm_ts_default.mpb:
        * MPC/config/ndds_idltocpp.mpb:
        * MPC/config/ndds_idltocpp_stub.mpb:
        * MPC/config/ndds_idltocpp_ts_defaults.mpb:
        * connectors/dds4ccm/examples/Hello/Base/Hello_Base.idl:
        * connectors/dds4ccm/examples/Large_Deployment/Common/Common.idl:
        * connectors/dds4ccm/examples/Large_Deployment/Common/Common.mpc:
        * connectors/dds4ccm/examples/Quoter/Base/Quoter_Base.idl:
        * connectors/dds4ccm/examples/Shapes/Base/Shapes_Base.idl:
        * connectors/dds4ccm/idl/dds4ccm_Base.idl:
        * connectors/dds4ccm/idl/dds4ccm_QueryFilter.idl:
        * connectors/dds4ccm/idl/dds4ccm_skel.mpc:
        * connectors/dds4ccm/idl/dds4ccm_stub.mpc:
        * connectors/dds4ccm/idl/ndds/ndds_dcps.idl:
        * connectors/dds4ccm/impl/CCM_DataReader.h:
        * connectors/dds4ccm/impl/CCM_DataReader.cpp:
        * connectors/dds4ccm/impl/CCM_DataWriter.h: